# QcoderCLI

./: .env.example  .gitignore  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY_AUDIT_REPORT.md  SECURITY_FIXES_SUMMARY.md  SETUP_COMPLETATO.md  START_HERE.md  TESTING.md  TEST_SUMMARY.md  VALIDATION_SUMMARY.md  pyproject.toml  requirements.txt  setup.py
.qcoder/: QCODER.example.md  config.example.yaml
docs/: VALIDATION_REFERENCE.md
examples/: example_plugin.py  workflow_example.yaml
src/qcoder/: __init__.py  cli.py
src/qcoder/core/: __init__.py  ai_client.py  config.py  conversation.py
src/qcoder/modules/: __init__.py  chat.py  file_ops.py  github_integration.py  shell.py  web_search.py  workflow.py
src/qcoder/plugins/: __init__.py  mcp_server.py  plugin_manager.py
src/qcoder/utils/: __init__.py  banner.py  logger.py  output.py  validators.py
tests/: README.md  __init__.py  conftest.py  test_ai_client.py  test_config.py  test_conversation.py  test_file_ops.py  test_security.py  test_shell.py  test_validators.py
